fix:adjust on mobile

--- a/src/components/Home/styles.scss
+++ b/src/components/Home/styles.scss
@@ -1,7 +1,7 @@
 .home-container {
   background: linear-gradient(180deg, #f5db13 0%, #f2b807 100%);
   width: 100%;
-  height: 100%;
+  height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -79,9 +79,5 @@
       flex-direction: column-reverse;
       padding-top: 102px;
     }
-  }
-
-  @media (min-width: 1024px) {
-    height: 100vh;
   }
 }
